i. fixed. it. it's aligned now. weeeee (just copied the stuff from nav and tweaked a few things, firefox is amazing

--- a/static/style.css
+++ b/static/style.css
@@ -154,33 +154,39 @@ html {
 }
 
 footer {
+  background-color: var(--primary-color);
+  overflow: auto;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: auto;
-  position: static;
-  background-color: var(--primary-color);
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
+
+  
+}
+
+footer ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 footer li {
   display: inline-block;
-  text-align: center;
-  padding: 0;
-  margin: 0;
+  margin-left: 60px;
+  margin-right: 60px;
+  padding: 14px;
+
   position: relative;
 }
 
 footer a {
-  padding: var(--standard-spacing) 4rem;
   color: var(--element-text-color);
   text-decoration: none;
   text-transform: uppercase;
   font-size: 15px;
 }
+
+
 
 :root {
   --primary-color: #55d6aa;
